# tvshow

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
Formula/: tvshow.rb
scripts/: update-homebrew.sh
src/: main.rs
