[package]
name = "tvshow"
version = "0.0.2"
edition = "2026"
license-file = "LICENSE"
description = "Display Japanese TV schedules in the terminal."
homepage = "https://github.com/Doarakko/tvshow"
repository = "https://github.com/Doarakko/tvshow"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
scraper = "0.22"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
unicode-width = "0.2"
