[package]
name = "tvshow"
version = "0.0.3"
edition = "2021"
license-file = "LICENSE"
description = "Display Japanese TV schedules in the terminal."
homepage = "https://github.com/Doarakko/tvshow"
repository = "https://github.com/Doarakko/tvshow"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
scraper = "0.25.0"
structopt = "0.3.26"
tokio = { version = "1.49.0", features = ["full"] }
unicode-width = "0.2.2"
